@@ -60,6 +60,7 @@ class ConnectionPool extends EventEmitter {
     this.config.stream = this.config.stream || false
     this.config.parseJSON = this.config.parseJSON || false
     this.config.arrayRowMode = this.config.arrayRowMode || false
+    this.config.validateConnection = 'validateConnection' in this.config ? this.config.validateConnection : true
 
     if (/^(.*)\\(.*)$/.exec(this.config.server)) {
       this.config.server = RegExp.$1
