@@ -66,7 +66,7 @@ class ConnectionPool extends BaseConnectionPool {
 
   _poolValidate (tds) {
     if (tds && !tds.hasError) {
-      return new shared.Promise((resolve) => {
+      return !this.config.validateConnection || new shared.Promise((resolve) => {
         tds.query('SELECT 1;', (err) => {
           resolve(!err)
         })
