@@ -97,7 +97,7 @@ class ConnectionPool extends BaseConnectionPool {
 
   _poolValidate (tedious) {
     if (tedious && !tedious.closed && !tedious.hasError) {
-      return new shared.Promise((resolve) => {
+      return !this.config.validateConnection || new shared.Promise((resolve) => {
         const req = new tds.Request('SELECT 1;', (err) => {
           resolve(!err)
         })
